fixed footer alignment, font color on CTA section

--- a/app.css
+++ b/app.css
@@ -128,6 +128,7 @@ footer {
     justify-content: center;
     align-items: center;
     background-color: #3882f6;
+    color: #f9faf8;
     padding: 10ch 15ch;
     border-radius: 1.2rem;
     gap: 5rem;
@@ -135,4 +136,13 @@ footer {
 
 .call-to-action button {
     padding: 5px 30px;
+    background-color: transparent;
+    color: #f9faf8;
+    border: 1px solid #f9faf8;
+    border-radius: .5rem;
+}
+
+footer {
+    text-align: center;
+    padding: 2ch 0;
 }
